src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_ControlTemplateMissingKey.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<!--
/*******************************************************************
 * Purpose: Verifies missing a key in ControlTemplate throws a parse exception
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_ControlTemplateMissingKey.xaml $
********************************************************************/
-->

<StackPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">

    <StackPanel.Resources>

        <ControlTemplate TargetType="{x:Type Button}">
            <Canvas Background="Blue" />
        </ControlTemplate>

        <!--<SolidColorBrush x:Key="{x:Type Button}" Color="Brown" />-->

    </StackPanel.Resources>

    <Button Style="{x:Null}" />

</StackPanel>

</Page>
